# edgeai-lab12

./: .gitignore  Dockerfile.ci  entrypoint.sh  inference_node.py  pyproject.toml  requirements.txt  validate_step0.sh  validate_step1.sh  validate_step2.sh  validate_step3.sh
.github/workflows/: ci.yml
tests/: test_smoke.py
